syntax = "proto3";

//cookie
package tinkoff.v1;

import "google/api/annotations.proto";

option go_package = "pb/v1";


service TinkoffService {
    rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse) {
        option (google.api.http) = {
            get: "/account/list"
        };
    }
}

message GetAccountsResponse {
    message Account {
        string type = 1;
        string id = 2;
    }
    repeated Account list = 1;
}

message GetAccountsRequest {}